probando otra direccion

--- a/13_Practica_Obligatoria_Python_Basics_I_Final.ipynb
+++ b/13_Practica_Obligatoria_Python_Basics_I_Final.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,16 +89,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digame su dirección 3\n"
+      "Digame su dirección Plaza Nueva,11, 4A\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118.8\n",
-      "304.3\n",
-      "Le mandaremos las 46 pizzas a la dirección 3 .Serán 423.1 €. Muchas gracias por su pedido\n"
+      "Le mandaremos las 46 pizzas a la dirección Plaza Nueva,11, 4A .Serán 423.1 €. Muchas gracias por su pedido\n"
      ]
     }
    ],
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
