--- a/18_Practica_Obligatoria_Algebra_Numpy_final.ipynb
+++ b/18_Practica_Obligatoria_Algebra_Numpy_final.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 573,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        " 'Pocahontas': array([0, 0, 5, 0, 5])}"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 573,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 574,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 575,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "       [0, 0, 5, 0, 5]])"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 575,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 576,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 577,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "       [25,  0,  0, 50]])"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 577,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 579,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 580,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[0.5813953488372093, 0.4111706851748298, 0.40182589687540177]"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 580,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "[0.5813953488372093, 0.7072135785007072, 0.0]"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 581,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "[0.4111706851748298, 0.7072135785007072, 0.0]"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 582,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "[0.4111706851748298, 0.0, 0.0]"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 583,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,8 +500,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las películas más similares son Jumanji y Mortal Combat\n",
-    "Las películas más diferentes son Jumanji y Mortal Combat con Pocahontas"
+    "Las película más similar a Toy Story es Jumanji\n",
+    "\n",
+    "La película más similar a Jumanji es Mortal Combat\n",
+    "\n",
+    "La película más similar a Mortal Combat es Jumanji\n",
+    "\n",
+    "La película mas similar a Pocahontas es Toy Story \n"
    ]
   },
   {
