--- a/18_Practica_Obligatoria_Numpy__II_final.ipynb
+++ b/18_Practica_Obligatoria_Numpy__II_final.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 803,
    "metadata": {},
    "outputs": [
     {
@@ -497,31 +497,31 @@
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
-      "Posicionando en: (6, 8), (6, 11) orientacion E\n",
-      "No se puede posicionar: coordenada final fuera del tablero\n",
       "Posicionar barco aleatorio\n",
+      "Posicionando en: (8, 2), (5, 2) orientacion N\n",
+      "Barco posicionado\n",
       "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' 'O' ' ' 'O' 'O' 'X' 'O' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' '-' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' '-' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
-      "Posicionando en: (0, 6), (1, 6) orientacion S\n",
-      "No se puede posicionar: Coordenadas ocupadas\n",
       "Posicionar barco aleatorio\n",
+      "Posicionando en: (7, 7), (8, 7) orientacion S\n",
+      "Barco posicionado\n",
       "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' 'O' ' ' 'O' 'O' 'X' 'O' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' '-' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' '-' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' 'O' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' 'O' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
      ]
     }
@@ -548,13 +548,13 @@
     "print(\"Disparo en \" + str(disparo_2))\n",
     "print(tablero)\n",
     "# Posicionar barco aleatorio\n",
+    "print(\"Posicionar barco aleatorio\")\n",
     "tablero, resultado = posicionar_barco_aleatorio(tablero, tamano=4)\n",
     "print(resultado)\n",
-    "print(\"Posicionar barco aleatorio\")\n",
     "print(tablero)\n",
+    "print(\"Posicionar barco aleatorio\")\n",
     "tablero, resultado = posicionar_barco_aleatorio(tablero, tamano=2)\n",
     "print(resultado)\n",
-    "print(\"Posicionar barco aleatorio\")\n",
     "print(tablero)"
    ]
   }
