Ejercico Sprint 8 unidad 1 con imagen
Subo ambos archivos

--- a/18_Practica_Obligatoria_Visualizacion_Basica_hecha.ipynb
+++ b/18_Practica_Obligatoria_Visualizacion_Basica_hecha.ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -843,10 +843,10 @@
     "ax.set_title('Cuidades más pobladas de California')\n",
     "\n",
     "\n",
-    "ax.bar_label(bar_container, fmt='{:,.0f}')\n",
+    "ax.bar_label(bar_container, fmt='{:,.0f}');\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "\n"
    ]
   },
   {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
    "source": [
     "# Creo la figura grande\n",
     "\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(20,20) )\n",
+    "figure, axes = plt.subplots(2, 2, figsize=(20,20) )\n",
     "\n",
     "# Datos primera figura\n",
     "Cuidades = df_ciudades.index\n",
@@ -1045,21 +1045,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "findfont: Font family 'Bradley Hand itc' not found.\n",
+      "findfont: Font family 'Bradley Hand itc' not found.\n",
+      "findfont: Font family 'Bradley Hand itc' not found.\n",
+      "findfont: Font family 'Bradley Hand itc' not found.\n",
+      "findfont: Font family 'Bradley Hand itc' not found.\n"
+     ]
     }
    ],
    "source": [
-    "plt.savefig('matplotlib grafica obligatoria.png')"
+    "figure.savefig('matplotlib grafica.png')"
    ]
   },
   {
