Práctica obligatoria Unidad 2 Sprint 10
Corrección de errores. Ampliación de resultados

--- a/18_Practica_Obligatoria_Scraping_API_Final.ipynb
+++ b/18_Practica_Obligatoria_Scraping_API_Final.ipynb
@@ -133,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"ad56aea90fa3f409e8717c170ad70e29\"\n",
-    "api_token = \"eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJhZDU2YWVhOTBmYTNmNDA5ZTg3MTdjMTcwYWQ3MGUyOSIsIm5iZiI6MTc0MzUzOTUwMC45NDUsInN1YiI6IjY3ZWM0ZDJjOWM3MGVlOWEyM2M3NGQzZiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.pwYycXEFeJj7tfFbYrh6kDVHvl8-BAHb4zEgM9MnsFk\""
+    "api_key = \"xxx\"\n",
+    "api_token = \"xxx\""
    ]
   },
   {
