--- a/Bootcamp_Data_Science_2025/04_Machine_Learning /Sprint 12_ML_Modelos_Supervisdos_III_Otros_Modelos_Supervisados_y_Repaso/Unidad 02/18_Practica_Obligatoria_Repaso_Aprendizaje_Supervisado_Hecha.ipynb
+++ b/Bootcamp_Data_Science_2025/04_Machine_Learning /Sprint 12_ML_Modelos_Supervisdos_III_Otros_Modelos_Supervisados_y_Repaso/Unidad 02/18_Practica_Obligatoria_Repaso_Aprendizaje_Supervisado_Hecha.ipynb
@@ -2144,7 +2144,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pasamos al modelado de regresión"
+   ]
   },
   {
    "cell_type": "code",
